--- a/web-design/css/style.css
+++ b/web-design/css/style.css
@@ -250,7 +250,8 @@ section.hero img#wayne {
   width: 1240px;
   /* height: auto; */
   /* left: 50%; */
-  top: 48%;
+  /* top: 48%; */
+  top: 34%;
   transform: translate(32%, -28%) scale(0.9);
   filter: drop-shadow(0 0 100px #fff);
   z-index: 10001;
@@ -612,6 +613,7 @@ form {
   flex-wrap: wrap;
   font-weight: 100;
   font-size: 14px;
+  position: relative;
 }
 form .fieldset {
   flex-basis: 48%;
@@ -647,6 +649,28 @@ form textarea {
   border: 1px solid #e4e4e6;
   border-radius: 3px;
   resize: vertical; /* user can resize vertically, but width is fixed */
+}
+
+.success {
+  display: none;
+  /* background: #e1f8ed; */
+  background: #555;
+  color: #ffffff;
+  padding: 20px;
+  /* margin-top: 16px; */
+  margin-bottom: 16px;
+  margin-left: 1%;
+  margin-right: 1%;
+  width: 98%;
+  /* position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 10px #888; */
+  transition: 0.3s ease;
+}
+.success.is-active {
+  display: block;
 }
 .btn-box {
   width: 100%;
