--- a/web-design/css/style-pages.css
+++ b/web-design/css/style-pages.css
@@ -33,10 +33,8 @@ a {
 
 body {
   font-family: "Poppins", sans-serif;
-  /* font-size: 14px; */
   color: #333;
   font-weight: 400;
-  /* font-weight: 100; */
   line-height: 1.5;
   min-height: 1500px;
   background: #fff;
@@ -66,9 +64,6 @@ p {
   margin-left: auto;
 }
 
-/* 
-greens - dark to light
- */
 .color-1 {
   color: #004242;
 }
@@ -94,8 +89,13 @@ h3.sec_header.color-2 {
 .bg-2 {
   background: #0e6868;
 }
-
-.bg-white {
+.bg-blue-grey {
+  background: #4a5966;
+}
+.bg-mid-blue {
+  background: #6398b1;
+}
+s .bg-white {
   background: #fff;
 }
 .bg-light {
@@ -104,14 +104,13 @@ h3.sec_header.color-2 {
 
 /* Header Section */
 
-header {
+header.pages {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  /* height: 200px; */
   padding: 0 7%;
-  margin-top: 75px;
+  margin-top: 0;
   overflow: hidden;
   z-index: 12000;
   position: sticky;
@@ -197,83 +196,20 @@ section {
 section.hero {
   position: relative;
   width: 100%;
-  /* height: 95vh; */
-  height: 86vh;
+  /* height: 45vh; */
+  height: 350px;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #e8f5f3;
+  background: #f9f9f9;
 }
-
-section.hero img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  pointer-events: none;
-}
-
-/* section.hero::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #77e0e0;
-  z-index: 10000;
-  mix-blend-mode: color;
-} */
-
-#bg {
-  filter: grayscale(100%) invert(100%);
-  filter: grayscale(80%) brightness(50);
-}
-
-#mountain-left,
-#mountain-right {
-  display: none;
-}
-
-section.hero img#sun {
-  /* filter: brightness(120%);
-  filter: drop-shadow(0 0 100px #fff); */
-  /* filter: drop-shadow(0 0 100px #fff0f1) hue-rotate(180deg); */
-  filter: drop-shadow(0 0 100px #fff0f1) hue-rotate(125deg) brightness(107%);
-  object-fit: contain;
-  transform: scale(0.9);
-  top: 0 !important;
-}
-section.hero img#wayne {
-  /* width: 65%; */
-  width: 1240px;
-  /* height: auto; */
-  /* left: 50%; */
-  /* top: 48%; */
-  top: 34%;
-  transform: translate(32%, -28%) scale(0.9);
-  filter: drop-shadow(0 0 100px #fff);
-  z-index: 10001;
-  left: 0% !important;
-}
-
 /* Hero Content */
-section.hero .header-intro-content {
-  z-index: 11000;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  padding: 9%;
-}
-
 section.hero #left-intro {
-  width: 300px;
-  font-size: 48px;
-  color: #999;
+  width: 30%;
+  font-size: 34px;
+  color: #333;
   text-transform: uppercase;
   letter-spacing: 19.5px;
   line-height: 55px;
@@ -281,54 +217,31 @@ section.hero #left-intro {
   /* background: #c0043633;
   box-shadow: 0 0 10px #333; */
   position: relative;
-  font-weight: 600;
+  text-align: right;
 }
 
 section.hero #left-intro span {
   font-size: 60px;
   letter-spacing: 3px;
-  color: #333;
+  margin-right: 14.5px;
 }
 
 section.hero #left-intro span.bottom {
   letter-spacing: 2.2px;
+  color: #999;
 }
 
 section.hero #right-intro {
-  color: #333;
-  width: 300px;
-  font-size: 20px;
-  line-height: 35px;
-  font-weight: 500;
-  margin-right: -16px;
-  position: relative;
-  text-shadow: none;
-  text-transform: uppercase;
-}
-section.hero #right-intro h3 {
-  color: #999;
-  text-transform: capitalize;
-  font-weight: 500;
-}
-section.hero #right-intro p {
-  font-weight: 500;
-}
-section.hero #right-intro span {
-  font-size: 17px;
-  color: #d5d5d5;
-  text-transform: uppercase;
-  display: none;
+  /* width: 600px; */
+  width: 50%;
 }
 
-/* INTRO Section */
-section.intro {
-  padding: 0 20px;
-  position: relative;
-  background: #e8f5f3;
-  padding-bottom: 6rem;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
+section.hero #right-intro img {
+  /* max-width: 400px; */
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin: auto;
 }
 
 h3.sec_header {
@@ -340,25 +253,13 @@ h3.sec_header {
   position: relative;
 }
 
-section.intro p {
-  color: #333;
-  margin-bottom: 1rem;
-  font-size: 1.15rem;
-  line-height: 2.75rem;
-  padding: 0 40px;
-  max-width: 1100px;
-  margin: auto;
-}
-
-.col img,
-.col-left img,
-.col-right img,
-.contact-right-col img {
+.hero img,
+.col img {
   filter: grayscale(70%);
 }
 
-/* SERVICES section */
-section.services {
+/* Packages section */
+section.packages {
   padding: 0 20px;
   position: relative;
   background: #fff;
@@ -366,51 +267,52 @@ section.services {
   padding-bottom: 2rem;
 }
 
-section.services p {
+section.packages p {
   color: #e5e5e5;
   margin-bottom: 1rem;
   font-size: 1.15rem;
   line-height: 2.5rem;
-  padding: 0 40px;
+  padding: 0 30px;
   max-width: 1100px;
   margin: auto;
 }
 
-section.services .row {
+section.packages .row {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: start;
+  min-height: 60vh;
 }
 
-section.services .row > * {
-  flex-basis: 30%;
+section.packages .row > * {
+  flex-basis: 28%;
 }
 
 .col img {
   width: 50%;
-  height: 200px;
+  height: 100px;
 }
 
-section.services .content h4 {
+section.packages .content h4 {
   font-size: 30px;
   color: #2c6089;
   /* color: #666; */
 }
 
-section.services .content p {
+section.packages .content p {
   color: #333;
-  font-size: 1.1rem;
+  font-size: 1rem;
   line-height: 2rem;
   margin-top: 20px;
 }
 
-/* Features Section */
-.features {
+/* Packages 2 col Section */
+.packages-2-col {
   text-align: center;
 }
 
-.features h3.sec_header {
+.packages-2-col h3.sec_header {
   padding-top: 4rem;
   padding-bottom: 4rem;
   background: #e8f5f3;
@@ -428,15 +330,21 @@ section.services .content p {
 .row {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  min-height: 60vh;
+  justify-content: space-evenly;
+  min-height: 100vh;
   flex-wrap: wrap;
 }
 
 .row > * {
-  flex-basis: 50%;
+  /* flex-basis: 40%; */
   min-width: 300px;
-  padding: 5% 0;
+  padding: 5% 20px;
+}
+
+.image-group {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1.5rem;
 }
 
 .col-left img,
@@ -450,13 +358,8 @@ section.services .content p {
 .col-right h3 {
   font-size: 30px;
   color: #2c6089;
-  /* color: #666666; */
-  margin-bottom: 20px;
 }
 
-.col-left h3.color-white {
-  color: #666;
-}
 .col-left p,
 .col-right p {
   color: #333;
@@ -466,305 +369,36 @@ section.services .content p {
   background: #e8f5f3;
 }
 
-.padding-left {
-  padding-left: 100px;
+.card {
+  width: 450px;
 }
-.padding-right {
-  padding-right: 100px;
+.card-header {
+  background: #e5e5e5;
+  padding: 20px 40px;
 }
-
-/* Recent Work SECTION */
-.recent-work {
-  padding: 60px 0;
-  background: #e8f5f3;
-  font-family: "Roboto", sans-serif;
-  text-align: center;
-}
-
-.recent-work h3.sec_header {
-  font-size: 6em;
-  margin-top: 0;
-  margin-bottom: 0;
-  color: #333;
+.card-body {
+  background: #f9f9f9;
+  border: 1px solid #e5e5e5;
+  border-bottom: none;
+  border-top: none;
 }
 
-.recent-work h3 {
-  font-weight: 900;
-  font-size: 36px;
-  /* color: #333; */
+.card-body li {
+  padding: 15px 20px;
+  border-bottom: 1px solid #e5e5e5;
 }
 
-#demo-flat {
-  margin-bottom: 4rem;
+.card-body .price {
+  font-size: 40px;
 }
-
-#demo-flat h3 {
-  font-size: 1.2rem;
-  line-height: 2.4rem;
-  margin-bottom: 4rem;
-  padding: 0 20px;
-  color: #888;
-  font-weight: 500;
-}
-
-#demo-flat .flipster {
-  overflow-x: hidden;
-}
-
-#demo-flat .flipster__item__content {
-  background: #fff;
-}
-
-#demo-flat .flipster__item__content img {
-  width: 746px;
-  height: 520px;
-}
-
-#demo-flat .flipster__button {
-  padding: 10px;
-  opacity: 1;
-  margin: -1em 0em;
-  background: #fff;
-  box-shadow: 0 0 10px #333;
-}
-#demo-flat .flipster__button:hover,
-.flipster__button:focus {
-  opacity: 0.8;
-  color: #555;
-}
-
-#demo-flat #flat .content {
-  padding: 10px 10px 20px 10px;
-  text-align: center;
-  width: 300px;
-  margin: auto;
-}
-#demo-flat #flat .content span {
-  font-weight: 900;
-}
-#demo-flat #flat .content a {
-  color: #333;
-}
-#demo-flat #flat .content a:hover {
-  color: #555;
-}
-
-.recent-work .button {
-  display: inline-block;
-  background-color: #43a8a8;
-  color: #fff;
-  background: linear-gradient(to right, #777, #333 100%);
-  border-radius: 30px;
-  padding: 13px 40px;
-  margin-top: 15px;
-}
-
-.recent-work .button:hover {
-  background-color: #005757;
-  box-shadow: 4px 5px 30px rgba(0, 0, 0, 0.2);
-  background: linear-gradient(to right, #333, #777 100%);
-}
-
-/* Contact Section */
-#contact {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background: #fff;
-  /* background: #aecdce; */
-}
-
-.contact-row {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-#contact h1 {
-  color: #2c6089;
-  text-align: center;
-  margin: auto;
-  font-size: 30px;
-  line-height: 35px;
-  flex-basis: 100%;
-  margin-bottom: 25px;
-}
-
-#contact h1 span {
-  font-size: 18px;
-  line-height: 18px;
-  color: #888888;
-  font-weight: 400;
-}
-
-.contact-left-col,
-.contact-right-col {
-  /* flex-basis: 50%; */
-  flex-basis: 100%;
-}
-/* .contact-right-col img {
-  width: 95%;
-  padding-left: 5%;
-} */
-
-/* Contact Form GETFORM ENDPOINT */
-form {
-  /* max-width: 550px; */
-  margin: 30px 0;
-  display: flex;
-  flex-wrap: wrap;
-  font-weight: 100;
+.card-body .price sup {
+  font-size: 25px;
+  top: 4px;
   position: relative;
 }
-form > * {
-  font-family: 'Poppins', sans-serif;
-  font-size: 14px;
+.price .common-btn {
+  margin-top: 0;
 }
-form .fieldset {
-  flex-basis: 48%;
-  margin-left: 1%;
-  margin-right: 1%;
-}
-form select#dropdown {
-  margin-bottom: 20px;
-  width: 100%;
-  padding: 13px;
-}
-form input {
-  width: 100%;
-  padding: 16px 10px;
-  margin-bottom: 20px;
-  outline: none;
-  box-shadow: none;
-  box-sizing: border-box;
-  border: 1px solid #e4e4e6;
-  border-radius: 3px;
-}
-form p {
-  margin-left: 1%;
-  font-size: 14px;
-}
-form textarea {
-  width: 98%;
-  height: 200px;
-  padding: 15px 10px;
-  margin-bottom: 25px;
-  margin-right: 1%;
-  margin-left: 1%;
-  border: 1px solid #e4e4e6;
-  border-radius: 3px;
-  resize: vertical; /* user can resize vertically, but width is fixed */
-}
-
-.success {
-  display: none;
-  /* background: #e1f8ed; */
-  background: #555;
-  color: #ffffff;
-  padding: 20px;
-  /* margin-top: 16px; */
-  margin-bottom: 16px;
-  margin-left: 1%;
-  margin-right: 1%;
-  width: 98%;
-  /* position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 0 10px #888; */
-  transition: 0.3s ease;
-}
-.success.is-active {
-  display: block;
-}
-.btn-box {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-left: 1%;
-  margin-right: 1%;
-}
-
-.btn-box button {
-  flex-basis: 200px;
-  padding: 18px 0;
-}
-
-.btn-box .common-btn {
-  background: #5a5b6a;
-  border: 2px solid #2c6089;
-  border: none;
-  color: #ffffff;
-  cursor: pointer;
-  transition: background 0.1s ease;
-}
-
-.btn-box .common-btn:hover {
-  /* background: #6398b1; */
-  background: #e4e4e6;
-  color: #333;
-}
-
-.common-btn {
-  background: #5a5b6a;
-  padding: 18px;
-  margin-top: 35px;
-  border: 2px solid #2c6089;
-  border: none;
-  color: #ffffff;
-  cursor: pointer;
-  transition: background 0.1s ease;
-}
-
-.common-btn:hover {
-  /* background: #6398b1; */
-  background: #e4e4e6;
-  color: #333;
-}
-
-/* END Contact Form GETFORM ENDPOINT */
-
-/* Contact Form Bitrix24 */
-/* #bx_form_iframe_6 {
-  max-height: 809px !important;
-  min-height: 606px;
-  width: 100%;
-}
-
-.flexible-middle-width .content-wrap {
-  max-width: 100% !important;
-}
-
-.crm-webform-iframe {
-  background-color: transparent;
-}
-
-.content-wrap .content {
-  background-color: transparent;
-}
-
-.crm-webform-wrapper {
-  background: transparent;
-}
-
-.page-theme-transparent .content {
-  background: transparent !important;
-}
-
-.crm-webform-fieldset {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.crm-webform-fieldset .row {
-  margin-left: 1%;
-  margin-right: 1%;
-  flex-basis: 48%;
-}
-
-.crm-webform-group.crm-webform-captcha {
-  max-height: 108px;
-} */
-/* END Contact Form Bitrix24 */
 
 /* Footer Section */
 #footer {
@@ -856,6 +490,23 @@ hr {
   transition: background 0.3s ease;
 }
 
+.common-btn {
+  background: #5a5b6a;
+  padding: 18px;
+  margin-top: 35px;
+  border: 2px solid #2c6089;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+  transition: background 0.1s ease;
+}
+
+.common-btn:hover {
+  /* background: #6398b1; */
+  background: #e4e4e6;
+  color: #333;
+}
+
 /* Scroll to top Button */
 #myBtn {
   display: none; /* Hidden by default */
@@ -890,29 +541,8 @@ hr {
 }
 
 /* MEDIA QUERIES */
-@media (min-width: 1550px) and (max-width: 1899px) {
-  section.hero img#wayne {
-    transform: translate(20%, -28%) scale(0.9);
-  }
-}
 
-@media (min-width: 1400px) and (max-width: 1549px) {
-  section.hero img#wayne {
-    transform: translate(10%, -28%) scale(0.9);
-  }
-}
 @media screen and (max-width: 1399px) {
-  #sun {
-    object-fit: contain;
-    left: 25%;
-    transform: scale(1) !important;
-  }
-  section.hero .header-intro-content {
-    display: block;
-  }
-  section.hero #right-intro {
-    width: 60%;
-  }
   #style-switch {
     display: flex;
     flex-direction: row;
@@ -926,32 +556,35 @@ hr {
 }
 
 @media screen and (max-width: 1199px) {
+  section.hero #right-intro,
+  section.hero #left-intro {
+    width: 40%;
+  }
   h3.sec_header,
   .recent-work h3.sec_header {
     font-size: 4.5em;
   }
-  section.services {
-    padding-bottom: 4rem;
+  section.packages .row > * {
+    flex-basis: 45%;
   }
-  section.services p {
-    padding: 0 30px;
+  .row {
+    padding: 5% 0;
   }
   .container {
     max-width: 95%;
   }
+  .order-0 {
+    order: 0;
+  }
+  .order-1 {
+    order: 1;
+  }
+
   .padding-left {
-    padding-left: 50px;
+    padding-left: 0;
   }
   .padding-right {
-    padding-right: 50px;
-  }
-  section.intro p {
-    font-size: 1rem;
-    line-height: 2.5rem;
-  }
-  section.services .content p {
-    font-size: 1rem;
-    line-height: 1.6rem;
+    padding-right: 0;
   }
   p {
     font-size: 1rem;
@@ -976,8 +609,13 @@ hr {
 }
 
 @media screen and (max-width: 991px) {
-  section.hero {
-    height: 95vh;
+  section.hero #left-intro {
+    text-align: center;
+    width: 100%;
+    padding: 20px 0;
+  }
+  section.hero #right-intro {
+    display: none;
   }
   header {
     /* display: block; */
@@ -993,7 +631,7 @@ hr {
   }
   @media (orientation: landscape) {
     section.hero {
-      height: 90vh;
+      /* height: 90vh; */
     }
     section.hero #left-intro {
       font-size: 35px;
@@ -1019,29 +657,12 @@ hr {
     }
   }
 
-  section.hero img#wayne {
-    filter: drop-shadow(0 0 60px #eee);
-    /* transform: translate(-50%, -28%) scale(0.8); */
-  }
-  #sun {
-    left: 30%;
-    transform: scale(1.15);
-  }
-  section.services .row > * {
-    flex-basis: 50%;
-  }
-  .row > * {
-    flex-basis: 45%;
+  section.packages .row > * {
+    flex-basis: 100%;
   }
   h3.sec_header,
   .recent-work h3.sec_header {
     font-size: 4em;
-  }
-  .padding-left {
-    padding-left: 10px;
-  }
-  .padding-right {
-    padding-right: 10px;
   }
   #demo-flat .flipster__item__content {
     max-width: 90%;
@@ -1052,11 +673,6 @@ hr {
       width: 502px;
       height: 350px;
     }
-  }
-}
-@media screen and (max-width: 807px) {
-  #bx_form_iframe_6 {
-    min-height: 770px;
   }
 }
 
@@ -1099,22 +715,11 @@ hr {
     flex-basis: 90%;
     margin: auto;
   }
-  .padding-left {
-    padding-left: 0px;
+  .card {
+    width: 100%;
+    margin: auto;
   }
-  .padding-right {
-    padding-right: 0px;
-  }
-  .recent-work .columns {
-    -webkit-column-count: 1;
-    -moz-column-count: 1;
-    column-count: 1;
-    -webkit-column-gap: 30px;
-    -moz-column-gap: 30px;
-    column-gap: 30px;
-    orphans: 1;
-    widows: 1;
-  }
+
   .container {
     max-width: 540px;
   }
@@ -1180,6 +785,13 @@ hr {
   .recent-work h3.sec_header {
     font-size: 2em;
   }
+  .image-group {
+    display: block;
+  }
+  .image-group img {
+    padding: 10px;
+  }
+  
   #demo-flat h3 {
     font-size: 1.2rem;
     line-height: 1.8rem;
