--- a/Nature carousel/style.css
+++ b/Nature carousel/style.css
@@ -51,7 +51,7 @@ h4 {
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-end;
-  background: url(images/01.jpg) top no-repeat;
+  background: url(images/02.jpg) bottom no-repeat;
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
@@ -59,14 +59,14 @@ h4 {
   padding: 0 40px 0 80px;
   overflow-x: hidden;
   position: relative;
-  transition: .3s ease-in-out;
-  animation: fade-in .3s ease-in-out;
+  /* transition: .3s ease-in-out; */
+  animation: fade-in 0.3s ease-in-out;
   animation-fill-mode: backwards;
 }
 
 @keyframes fade-in {
   from {
-    opacity: .3;
+    opacity: 0.3;
   }
   to {
     opacity: 1;
@@ -104,8 +104,10 @@ nav {
   align-items: center;
   position: absolute;
   top: 0;
-  padding: 0 40px;
+  left: 0;
+  padding: 0 0 0 70px;
   z-index: 4;
+  background: rgba(0, 0, 0, 0.1);
 }
 .logo {
   font-size: 24px;
@@ -115,7 +117,7 @@ nav {
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
-  animation: left-in .5s ease-in-out .3s;
+  animation: left-in 0.5s ease-in-out 0.3s;
   animation-fill-mode: backwards;
   position: relative;
 }
@@ -123,14 +125,15 @@ nav {
   text-transform: uppercase;
   font-weight: 900;
   font-size: 25px;
-  color: #9f9d9a;
+  /* color: #9f9d9a; */
+  color: #df9b1e;
   letter-spacing: -1px;
 }
 
 nav ul {
   list-style: none;
   display: flex;
-  animation: right-in .5s ease-in-out .3s;
+  animation: right-in 0.5s ease-in-out 0.3s;
   animation-fill-mode: backwards;
   position: relative;
 }
@@ -150,7 +153,7 @@ nav .toggler {
   cursor: pointer;
   z-index: 10;
   position: fixed;
-  right: 40px;
+  right: 30px;
 }
 
 .intro {
@@ -184,21 +187,21 @@ nav .toggler {
   background: #fff;
   /* background: #221f0f; */
   margin-bottom: 20px;
-  animation: right-in .5s ease-in-out 1.2s;
+  animation: right-in 0.5s ease-in-out 1.2s;
   animation-fill-mode: backwards;
   position: relative;
 }
 
 .hero-content h4 {
   margin-bottom: 15px;
-  animation: left-in .8s ease-in-out 1.7s;
+  animation: left-in 0.8s ease-in-out 1.7s;
   animation-fill-mode: backwards;
   position: relative;
 }
 .hero-content h1 {
   font-size: 65px;
   margin-bottom: 10px;
-  animation: right-in .5s ease-in-out 1.5s;
+  animation: right-in 0.5s ease-in-out 1.5s;
   animation-fill-mode: backwards;
   position: relative;
 }
@@ -212,12 +215,12 @@ nav .toggler {
   margin-top: 50px;
   margin-right: 30px;
   vertical-align: bottom;
-  animation: left-in .4s ease-in-out 2.5s;
+  animation: left-in 0.4s ease-in-out 2.5s;
   animation-fill-mode: backwards;
   position: relative;
 }
 .hero-content p {
-  animation: left-in .2s ease-in-out 2.3s;
+  animation: left-in 0.2s ease-in-out 2.3s;
   animation-fill-mode: backwards;
   position: relative;
 }
@@ -231,7 +234,7 @@ a.btn {
   border: 1px solid #eee;
   padding: 15px 35px;
   border-radius: 35px;
-  animation: right-in .3s ease-in-out 2.4s;
+  animation: right-in 0.3s ease-in-out 2.4s;
   animation-fill-mode: backwards;
   position: relative;
 }
@@ -239,7 +242,6 @@ a.btn:hover {
   color: #ddd;
   /* color: #2d2c11; */
 }
-
 
 /* Carousel */
 .hero-carousel {
@@ -254,7 +256,7 @@ a.btn:hover {
   position: absolute;
   bottom: 2.5em;
   left: 30px;
-  animation: bottom-in .5s ease-in-out 2.4s;
+  animation: bottom-in 0.5s ease-in-out 2.4s;
   animation-fill-mode: backwards;
 }
 @keyframes bottom-in {
@@ -269,7 +271,7 @@ a.btn:hover {
 }
 
 .glide__slides {
-  padding: 15px;
+  /* padding: 15px; */
   display: flex;
   position: relative;
   transition: 1s ease-in-out;
@@ -278,28 +280,6 @@ a.btn:hover {
   background-color: transparent;
   border: none;
 }
-/* .glide__arrow {
-  position: relative;
-  display: inline-block;
-  top: auto;
-  z-index: 5;
-  color: white;
-  text-transform: uppercase;
-  padding: 0;
-  border-radius: 0;
-  box-shadow: none;
-  text-shadow: none;
-  opacity: 1;
-  cursor: pointer;
-  transition: opacity 150ms ease, border 300ms ease-in-out;
-  transform: translate(0);
-  line-height: 1;
-}
-.glide__arrow--left,
-.glide__arrow--right {
-  left: 0;
-  right: 0;
-} */
 .carousel-controls i {
   color: #fff;
   font-size: 25px;
@@ -319,7 +299,7 @@ a.btn:hover {
   position: absolute;
   right: 0;
   bottom: 2.7em;
-  animation: right-in .8s ease-in-out 2.4s;
+  animation: right-in 0.8s ease-in-out 2.4s;
   animation-fill-mode: backwards;
 }
 .carousel-indicator span {
@@ -337,14 +317,14 @@ a.btn:hover {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  /* margin: 12px !important; */
+  /* margin: 20px !important; */
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
   position: relative;
   cursor: pointer;
-  animation: right-in .5s ease-in-out;
-  animation-delay: .3s;
+  animation: right-in 0.5s ease-in-out;
+  animation-delay: 0.3s;
   animation-fill-mode: backwards;
 }
 
@@ -388,17 +368,17 @@ a.btn:hover {
 .carousel-item:nth-child(1) {
   /* background-image: url(images/13.jpg); */
   background-image: url(images/02.jpg);
-  animation-delay: .4s;
+  animation-delay: 0.4s;
 }
 .carousel-item:nth-child(2) {
   /* background-image: url(images/2.jpg); */
   background-image: url(images/03.jpg);
-  animation-delay: .6s;
+  animation-delay: 0.6s;
 }
 .carousel-item:nth-child(3) {
   /* background-image: url(images/9.jpeg); */
   background-image: url(images/05.jpg);
-  animation-delay: .8s;
+  animation-delay: 0.8s;
 }
 .carousel-item:nth-child(4) {
   /* background-image: url(images/4.jpg); */
@@ -442,6 +422,9 @@ a.btn:hover {
   .hero-content {
     padding: 12em 0 6em;
   }
+  nav {
+    padding: 0 20px;
+  }
   nav ul {
     display: flex;
     flex-direction: column;
@@ -479,27 +462,25 @@ a.btn:hover {
     right: 0;
   }
 }
-@media all and (max-height: 600px) {
-  @media all and (orientation: landscape) {
-    .hero-carousel {
-      padding: 0 0 6em;
-    }
-    .carousel-item {
-      /* height: 240px !important; */
-      height: 65vh !important;
-    }
-    .carousel-controls {
-      bottom: 1.5em;
-    }
-    .carousel-controls i {
-      font-size: 15px;
-      padding: 15px 19px;
-    }
-    .carousel-indicator {
-      bottom: 1.8em;
-    }
-    .carousel-indicator span {
-      font-size: 30px;
-    }
+@media all and (max-height: 600px) and (max-width: 991px) and (orientation: landscape) {
+  .hero-carousel {
+    padding: 0 0 6em;
+  }
+  .carousel-item {
+    /* height: 240px !important; */
+    height: 65vh !important;
+  }
+  .carousel-controls {
+    bottom: 1.5em;
+  }
+  .carousel-controls i {
+    font-size: 15px;
+    padding: 15px 19px;
+  }
+  .carousel-indicator {
+    bottom: 1.8em;
+  }
+  .carousel-indicator span {
+    font-size: 30px;
   }
 }
