--- a/Nature carousel/custom.css
+++ b/Nature carousel/custom.css
@@ -1,5 +1,5 @@
 .carousel-item {
-  width: 248px !important;
+  width: 240px !important;
   min-width: 240px !important;
   height: 360px !important;
   background-size: cover;
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  margin: 20px !important;
+  margin: 12px !important;
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
@@ -17,4 +17,8 @@
   animation: right-in 0.5s ease-in-out;
   animation-delay: 0.3s;
   animation-fill-mode: backwards;
+}
+
+.glide__slides {
+  width: 2000px;
 }
