--- a/Nike Product Card/style.css
+++ b/Nike Product Card/style.css
@@ -50,8 +50,8 @@ main {
 }
 .card-top .shoe {
   flex: 100%;
-  /* width: 100%; */
-  width: auto;
+  width: 100%;
+  /* width: auto; */
   z-index: 2;
   max-height: 100%;
   margin-top: -4rem;
