--- a/Clean Juice Landing page/style.css
+++ b/Clean Juice Landing page/style.css
@@ -291,7 +291,7 @@ a.next {
 /* SLIDE-6 PINK */
 #slide-6 {
   /* bg bright */
-  background: ffc0cb;
+  background: #ffc0cb;
   /* bg light */
   background: #ffc9c9;
   /* Gradient */
@@ -332,4 +332,114 @@ a.next {
 #slide-7 .arrows a:hover {
   color: #fff;
   background: #df6135;
+}
+
+.red {
+  letter-spacing: 40px;
+  margin-right: -40px;
+}
+.pink {
+  letter-spacing: 30px;
+  margin-right: -30px;
+}
+.green {
+  letter-spacing: 15px;
+  margin-right: -15px;
+}
+
+
+
+
+/**** Responsive ****/
+@media screen and (max-width:1399px) {
+  .nav {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .logo {
+    flex: 100%;
+    text-align: center;
+  }
+  ul {
+    display: none;
+  }
+  .search {
+    margin: 20px;
+  }
+
+  .content {
+    top: 35%;
+  }
+  .tagline {
+    font-size: 20px;
+  }
+  .pages span {
+    font-size: 40px;
+  }
+  .title {
+    font-size: 150px;
+  }
+  .cta-btn {
+    flex: 1;
+  }
+  .cta-btn a {
+    font-size: 16px;
+  }
+  .desc p:nth-child(1) {
+    font-size: 20px;
+  }
+  a.prev {
+    top: 25%;
+    left: 100px;
+  }
+  a.next {
+    top: 25%;
+    right: 100px;
+  }
+  .juice img {
+    max-height: 500px;
+  }
+}
+
+@media screen and (max-width:1000px) {
+  a.prev {
+    top: 25%;
+    left: 30px;
+  }
+  a.next {
+    top: 25%;
+    right: 30px;
+  }
+}
+
+@media screen and (max-width:900px) {
+  .tagline {
+    font-size: 17px;
+  }
+  .title {
+    font-size: 100px;
+    margin-top: 100px;
+  }
+  .red {
+    font-size: 150px;
+  }
+  .cta-btn {
+    display: none;
+  }
+  .desc {
+    display: none;
+  }
+  .juice img {
+    max-height: 400px;
+  }
+}
+
+@media screen and (max-width:500px) {
+  .title {
+    font-size: 70px;
+    margin-top: 100px;
+  }
+  .red {
+    font-size: 90px;
+  }
 }
