--- a/Clean Juice Landing page/style.css
+++ b/Clean Juice Landing page/style.css
@@ -12,6 +12,7 @@ body {
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  background: #fff;
 }
 
 .nav {
@@ -401,7 +402,7 @@ a.next {
   }
 }
 
-@media screen and (max-width:1000px) {
+@media screen and (max-width:1200px) {
   a.prev {
     top: 25%;
     left: 30px;
